# KJ

./: CMakeLists.txt  README.md  advancedsampler.js  core.js  engines.js  index.html  main.js  mods.js  patterns.js  pianoroll.js  samplenhold.js  script.js  sequencer.js  stepfx.js  style.css  tracks.js  ui.js
.github/workflows/: build.yml
src/: dsp.cpp  dsp.h  main.cpp
web/: beepbox-engines.js  core.js  cvl.js  dsp.js  engine-utils.js  engines.js  index.html  juno60-engine.js  main.js  mods.js  noise-engine.js  patterns.js  pianoroll.js  sampler-engine.js  sequencer.js  stepfx.js  style.css  synth-engine.js  tb303-engine.js  tracks.js  ui.js
web/cvl/: constants.js  dnd.js  index.js  render.js  state.js  waveform.js
